// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignHearingsList Displays no hearings message when there are no hearings 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="time-slot-card-label no-hearings-label"
      >
        No Upcoming hearings to display
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="time-slot-card-label no-hearings-label"
    >
      No Upcoming hearings to display
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AssignHearingsList Matches snapshot with default props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="usa-grid time-slot-card"
      >
        <div
          class="usa-width-one-fourth"
        >
          <div>
            <p
              class="time-slot-card-time"
            >
              <span
                class="time-slot-card-label"
              >
                1:30 AM MDT
              </span>
              
              <br />
              3:30 AM EDT
            </p>
          </div>
        </div>
        <div
          class="usa-width-three-fourths"
        >
          <span
            class="time-slot-card-label"
          >
            Bob Smith
             
            <span
              style="margin: 0px 2px;"
            >
              ·
            </span>
             
            Veteran ID: 500000003
          </span>
          <div
            class="time-slot-details"
          >
            1 issue
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            <span
              aria-describedby="badge-200628-4"
              currentitem="false"
              data-event="focus mouseenter"
              data-event-off="keydown mouseleave"
              data-for="badge-200628-4"
              data-tip="true"
              role="tooltip"
              tabindex="-1"
            >
              <span
                aria-label="Hearing Request"
                data-css-2moai0=""
              >
                H
              </span>
            </span>
            <span
              data-css-1jzzn6r=""
            >
              <div
                class="__react_component_tooltip place-bottom type-dark "
                data-id="tooltip"
                id="badge-200628-4"
              >
                Hearing Request
              </div>
            </span>
             
            200628-4
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            AMERICAN LEGION
          </div>
          <div
            class="time-slot-details"
          >
            <span>
              Original
            </span>
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            <span>
              Central
            </span>
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            <a
              href="/queue/appeals/005334f7-b5c6-490c-a310-7dc5db22c8c3/?hearingDate=2020-08-15&regionalOffice=RO17"
              id="005334f7-b5c6-490c-a310-7dc5db22c8c3"
            >
              View Case Details
            </a>
          </div>
        </div>
      </div>
      <div
        class="usa-grid time-slot-card"
      >
        <div
          class="usa-width-one-fourth"
        >
          <div>
            <p
              class="time-slot-card-time"
            >
              <span
                class="time-slot-card-label"
              >
                4:00 AM EDT
              </span>
            </p>
          </div>
        </div>
        <div
          class="usa-width-three-fourths"
        >
          <span
            class="time-slot-card-label"
          >
            Tom Brady
             
            <span
              style="margin: 0px 2px;"
            >
              ·
            </span>
             
            Veteran ID: 100000005
          </span>
          <div
            class="time-slot-details"
          >
            1 issue
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            <span
              aria-describedby="badge-200624-613"
              currentitem="false"
              data-event="focus mouseenter"
              data-event-off="keydown mouseleave"
              data-for="badge-200624-613"
              data-tip="true"
              role="tooltip"
              tabindex="-1"
            >
              <span
                aria-label="Legacy"
                data-css-2moai0=""
              >
                L
              </span>
            </span>
            <span
              data-css-12vz59a=""
            >
              <div
                class="__react_component_tooltip place-bottom type-dark "
                data-id="tooltip"
                id="badge-200624-613"
              >
                Legacy
              </div>
            </span>
             
            200624-613
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            AMERICAN LEGION
          </div>
          <div
            class="time-slot-details"
          >
            <span>
              Original
            </span>
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            <span>
              Video
            </span>
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            <a
              href="/queue/appeals/0bf0263c-d863-4405-9b2e-f55cff77c6c3/?hearingDate=2020-08-15&regionalOffice=RO17"
              id="0bf0263c-d863-4405-9b2e-f55cff77c6c3"
            >
              View Case Details
            </a>
          </div>
        </div>
      </div>
      <div
        class="usa-grid time-slot-card"
      >
        <div
          class="usa-width-one-fourth"
        >
          <div>
            <p
              class="time-slot-card-time"
            >
              <span
                class="time-slot-card-label"
              >
                6:00 AM EDT
              </span>
            </p>
          </div>
        </div>
        <div
          class="usa-width-three-fourths"
        >
          <span
            class="time-slot-card-label"
          >
            Tom Brady
             
            <span
              style="margin: 0px 2px;"
            >
              ·
            </span>
             
            Veteran ID: 100000005
          </span>
          <div
            class="time-slot-details"
          >
            0 issues
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            <span
              aria-describedby="badge-200624-614"
              currentitem="false"
              data-event="focus mouseenter"
              data-event-off="keydown mouseleave"
              data-for="badge-200624-614"
              data-tip="true"
              role="tooltip"
              tabindex="-1"
            >
              <span
                aria-label="Hearing Request"
                data-css-2moai0=""
              >
                H
              </span>
            </span>
            <span
              data-css-1ediyry=""
            >
              <div
                class="__react_component_tooltip place-bottom type-dark "
                data-id="tooltip"
                id="badge-200624-614"
              >
                Hearing Request
              </div>
            </span>
             
            200624-614
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            AMERICAN LEGION
          </div>
          <div
            class="time-slot-details"
          >
            <span>
              Original
            </span>
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            <span>
              Video
            </span>
             
            <span
              style="margin: 0px 5px;"
            >
              ·
            </span>
             
            <a
              href="/queue/appeals/0bf0263c-d863-4405-9b2e-f55cff77c6c4/?hearingDate=2020-08-15&regionalOffice=RO17"
              id="0bf0263c-d863-4405-9b2e-f55cff77c6c4"
            >
              View Case Details
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="usa-grid time-slot-card"
    >
      <div
        class="usa-width-one-fourth"
      >
        <div>
          <p
            class="time-slot-card-time"
          >
            <span
              class="time-slot-card-label"
            >
              1:30 AM MDT
            </span>
            
            <br />
            3:30 AM EDT
          </p>
        </div>
      </div>
      <div
        class="usa-width-three-fourths"
      >
        <span
          class="time-slot-card-label"
        >
          Bob Smith
           
          <span
            style="margin: 0px 2px;"
          >
            ·
          </span>
           
          Veteran ID: 500000003
        </span>
        <div
          class="time-slot-details"
        >
          1 issue
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          <span
            aria-describedby="badge-200628-4"
            currentitem="false"
            data-event="focus mouseenter"
            data-event-off="keydown mouseleave"
            data-for="badge-200628-4"
            data-tip="true"
            role="tooltip"
            tabindex="-1"
          >
            <span
              aria-label="Hearing Request"
              data-css-2moai0=""
            >
              H
            </span>
          </span>
          <span
            data-css-1jzzn6r=""
          >
            <div
              class="__react_component_tooltip place-bottom type-dark "
              data-id="tooltip"
              id="badge-200628-4"
            >
              Hearing Request
            </div>
          </span>
           
          200628-4
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          AMERICAN LEGION
        </div>
        <div
          class="time-slot-details"
        >
          <span>
            Original
          </span>
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          <span>
            Central
          </span>
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          <a
            href="/queue/appeals/005334f7-b5c6-490c-a310-7dc5db22c8c3/?hearingDate=2020-08-15&regionalOffice=RO17"
            id="005334f7-b5c6-490c-a310-7dc5db22c8c3"
          >
            View Case Details
          </a>
        </div>
      </div>
    </div>
    <div
      class="usa-grid time-slot-card"
    >
      <div
        class="usa-width-one-fourth"
      >
        <div>
          <p
            class="time-slot-card-time"
          >
            <span
              class="time-slot-card-label"
            >
              4:00 AM EDT
            </span>
          </p>
        </div>
      </div>
      <div
        class="usa-width-three-fourths"
      >
        <span
          class="time-slot-card-label"
        >
          Tom Brady
           
          <span
            style="margin: 0px 2px;"
          >
            ·
          </span>
           
          Veteran ID: 100000005
        </span>
        <div
          class="time-slot-details"
        >
          1 issue
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          <span
            aria-describedby="badge-200624-613"
            currentitem="false"
            data-event="focus mouseenter"
            data-event-off="keydown mouseleave"
            data-for="badge-200624-613"
            data-tip="true"
            role="tooltip"
            tabindex="-1"
          >
            <span
              aria-label="Legacy"
              data-css-2moai0=""
            >
              L
            </span>
          </span>
          <span
            data-css-12vz59a=""
          >
            <div
              class="__react_component_tooltip place-bottom type-dark "
              data-id="tooltip"
              id="badge-200624-613"
            >
              Legacy
            </div>
          </span>
           
          200624-613
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          AMERICAN LEGION
        </div>
        <div
          class="time-slot-details"
        >
          <span>
            Original
          </span>
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          <span>
            Video
          </span>
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          <a
            href="/queue/appeals/0bf0263c-d863-4405-9b2e-f55cff77c6c3/?hearingDate=2020-08-15&regionalOffice=RO17"
            id="0bf0263c-d863-4405-9b2e-f55cff77c6c3"
          >
            View Case Details
          </a>
        </div>
      </div>
    </div>
    <div
      class="usa-grid time-slot-card"
    >
      <div
        class="usa-width-one-fourth"
      >
        <div>
          <p
            class="time-slot-card-time"
          >
            <span
              class="time-slot-card-label"
            >
              6:00 AM EDT
            </span>
          </p>
        </div>
      </div>
      <div
        class="usa-width-three-fourths"
      >
        <span
          class="time-slot-card-label"
        >
          Tom Brady
           
          <span
            style="margin: 0px 2px;"
          >
            ·
          </span>
           
          Veteran ID: 100000005
        </span>
        <div
          class="time-slot-details"
        >
          0 issues
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          <span
            aria-describedby="badge-200624-614"
            currentitem="false"
            data-event="focus mouseenter"
            data-event-off="keydown mouseleave"
            data-for="badge-200624-614"
            data-tip="true"
            role="tooltip"
            tabindex="-1"
          >
            <span
              aria-label="Hearing Request"
              data-css-2moai0=""
            >
              H
            </span>
          </span>
          <span
            data-css-1ediyry=""
          >
            <div
              class="__react_component_tooltip place-bottom type-dark "
              data-id="tooltip"
              id="badge-200624-614"
            >
              Hearing Request
            </div>
          </span>
           
          200624-614
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          AMERICAN LEGION
        </div>
        <div
          class="time-slot-details"
        >
          <span>
            Original
          </span>
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          <span>
            Video
          </span>
           
          <span
            style="margin: 0px 5px;"
          >
            ·
          </span>
           
          <a
            href="/queue/appeals/0bf0263c-d863-4405-9b2e-f55cff77c6c4/?hearingDate=2020-08-15&regionalOffice=RO17"
            id="0bf0263c-d863-4405-9b2e-f55cff77c6c4"
          >
            View Case Details
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
